--- a/main.html
+++ b/main.html
@@ -181,7 +181,7 @@
                 <ul>
                     <li><a href="#">Головна</a></li>
                     <li><a href="#">Про магазин</a></li>
-                    <li><a href="#">Каталог</a></li>
+                    <li><a href="catalog.html">Каталог</a></li>
                     <li><a href="#">Контакти</a></li>
                     <li><a href="#">Кошик</a></li>
                 </ul>
@@ -194,7 +194,7 @@
         <div class="banner-content">
             <h1>Комплектуючі для ПК</h1>
             <p>Великий вибір комплектуючих для вашого комп'ютера за вигідними цінами</p>
-            <a href="#" class="btn-primary">Перейти до каталогу</a>
+            <a href="catalog.html" class="btn-primary">Перейти до каталогу</a>
         </div>
     </section>
 
