--- a/catalog.html
+++ b/catalog.html
@@ -7,7 +7,7 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #f0f4f8;
+            background-color: #f5f5f5;
             color: #333;
             margin: 0;
             padding: 0;
@@ -55,7 +55,8 @@
 
         .product img {
             width: 100%;
-            height: auto;
+            height: 200px; /* Устанавливаем фиксированную высоту */
+            object-fit: cover; /* Обрезаем изображения, чтобы сохранить пропорции */
             border-radius: 8px;
         }
 
@@ -68,6 +69,13 @@
         .product p {
             font-size: 1.2em;
             color: #555;
+            margin: 10px 0;
+        }
+
+        .product .price {
+            font-size: 1.4em;
+            font-weight: bold;
+            color: #e74c3c;
             margin: 10px 0;
         }
 
@@ -104,72 +112,64 @@
 </header>
 
 <nav>
-    <a href="#">Головна</a>
-    <a href="#">Процесори</a>
-    <a href="#">Материнські плати</a>
-    <a href="#">Оперативна пам'ять</a>
-    <a href="#">Відеокарти</a>
-    <a href="#">Блоки живлення</a>
-    <a href="#">Охолодження</a>
-    <a href="#">Корпуси</a>
-    <a href="#">Про магазин</a>
-    <a href="#">Контакти</a>
-    <a href="#">Кошик</a>
+    <li><a href="main.html">Головна</a></li>
 </nav>
 
 <div class="container">
     <!-- Приклад товару 1 -->
     <div class="product">
-        <img src="https://via.placeholder.com/300x200" alt="Процесор Intel Core i9">
+        <img src="https://content2.rozetka.com.ua/goods/images/big/501216289.jpg" alt="Процесор Intel Core i9">
         <h3>Процесор Intel Core i9</h3>
         <p>Для максимальної продуктивності в іграх та роботі.</p>
+        <p class="price">28,999 грн</p>
         <button>Купити</button>
     </div>
 
     <!-- Приклад товару 2 -->
     <div class="product">
-        <img src="https://via.placeholder.com/300x200" alt="Материнська плата MSI MAG B550 TOMAHAWK">
+        <img src="https://asset.msi.com/resize/image/global/product/product_7_20200520165812_5ec4f124dcab7.png62405b38c58fe0f07fcef2367d8a9ba1/1024.png" alt="Материнська плата MSI MAG B550 TOMAHAWK">
         <h3>Материнська плата MSI MAG B550 TOMAHAWK</h3>
         <p>Надійна та продуктивна плата для ваших потреб.</p>
+        <p class="price">6,499 грн</p>
         <button>Купити</button>
     </div>
 
     <!-- Приклад товару 3 -->
     <div class="product">
-        <img src="https://via.placeholder.com/300x200" alt="Оперативна пам'ять Corsair Vengeance LPX">
+        <img src='https://ksd-images.lt/display/aikido/store/f92c7a6f8254cf479684733e4c34cd46.jpg' alt="Оперативна пам'ять Corsair Vengeance LPX">
         <h3>Оперативна пам'ять Corsair Vengeance LPX</h3>
         <p>16 GB DDR4 для чудової продуктивності.</p>
+        <p class="price">2,999 грн</p>
         <button>Купити</button>
     </div>
 
     <!-- Приклад товару 4 -->
     <div class="product">
-        <img src="https://via.placeholder.com/300x200" alt="Відеокарта NVIDIA GeForce RTX 4090">
+        <img src="https://b.428.ua/img/4007911/3000/2000/videokarta_msi_pci-e_geforce_rtx4090_24gb_ddr6x_rtx_4090_gaming_x_slim_24g~820~372.jpg" alt="Відеокарта NVIDIA GeForce RTX 4090">
         <h3>Відеокарта NVIDIA GeForce RTX 4090</h3>
         <p>Для ультра-високих роздільних здатностей та частоти кадрів.</p>
+        <p class="price">99,999 грн</p>
         <button>Купити</button>
     </div>
 
     <!-- Приклад товару 5 -->
     <div class="product">
-        <img src="https://via.placeholder.com/300x200" alt="Блок живлення Corsair RM850x">
-        <h3>Блок живлення Corsair RM850x</h3>
+        <img src="https://compx.ua/image/cache/webp/catalog/products/77/490bd476-8d06-11ee-8f93-001b21ea407b-1400x1400.webp" alt="Блок живлення Corsair RM850x">
+        <h3>Блок живлення Corsair RM850</h3>
         <p>850W, надійність та тиша для вашого ПК.</p>
+        <p class="price">4,499 грн</p>
         <button>Купити</button>
     </div>
 
     <!-- Приклад товару 6 -->
     <div class="product">
-        <img src="https://via.placeholder.com/300x200" alt="Система охолодження Noctua NH-D15">
+        <img src="https://pcshop.ua/image/cache/webp/catalog/tovar/kuler-dlya-protsessora-noctua-nh-d15-g2-326x264.webp" alt="Система охолодження Noctua NH-D15">
         <h3>Система охолодження Noctua NH-D15</h3>
         <p>Максимальна ефективність повітряного охолодження.</p>
+        <p class="price">4,999 грн</p>
         <button>Купити</button>
     </div>
 </div>
-
-<footer>
-    <p>&copy; 2024 Техносвіт. Усі права захищено.</p>
-</footer>
 
 </body>
 </html>
