--- a/main.html
+++ b/main.html
@@ -27,6 +27,7 @@
             background-color: #2c3e50;
             padding: 20px 0;
             color: white;
+            transition: background-color 0.3s ease;
         }
 
         .header-container {
@@ -40,6 +41,11 @@
             font-size: 24px;
             font-weight: bold;
             color: #ecf0f1;
+            transition: color 0.3s ease;
+        }
+
+        .logo a:hover {
+            color: #e74c3c;
         }
 
         .main-nav ul {
@@ -55,6 +61,11 @@
             color: #ecf0f1;
             font-size: 16px;
             text-transform: uppercase;
+            transition: color 0.3s ease;
+        }
+
+        .main-nav a:hover {
+            color: #e74c3c;
         }
 
         .banner {
@@ -62,6 +73,14 @@
             color: white;
             padding: 80px 20px;
             text-align: center;
+            opacity: 0;
+            animation: fadeIn 2s forwards;
+        }
+
+        @keyframes fadeIn {
+            to {
+                opacity: 1;
+            }
         }
 
         .banner-content h1 {
@@ -81,12 +100,19 @@
             border-radius: 4px;
             font-size: 16px;
             text-transform: uppercase;
+            transition: background-color 0.3s ease;
+        }
+
+        .btn-primary:hover {
+            background-color: #c0392b;
         }
 
         .products {
             padding: 40px 20px;
             background-color: #fff;
             text-align: center;
+            opacity: 0;
+            animation: fadeIn 2s forwards;
         }
 
         .products h2 {
@@ -108,10 +134,17 @@
             text-align: center;
             width: 250px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            transition: transform 0.3s ease;
+        }
+
+        .product-card:hover {
+            transform: scale(1.05);
         }
 
         .product-card img {
             width: 100%;
+            height: 250px; /* Фиксированная высота для изображения */
+            object-fit: contain; /* Сжимаем изображение, сохраняя пропорции */
             border-radius: 8px;
             margin-bottom: 15px;
         }
@@ -134,6 +167,11 @@
             border-radius: 4px;
             font-size: 14px;
             text-transform: uppercase;
+            transition: background-color 0.3s ease;
+        }
+
+        .btn-secondary:hover {
+            background-color: #27ae60;
         }
 
         footer {
@@ -179,10 +217,10 @@
             </div>
             <nav class="main-nav">
                 <ul>
-                    <li><a href="#">Головна</a></li>
-                    <li><a href="#">Про магазин</a></li>
+                    <li><a href="/">Головна</a></li>
+                    <li><a href="about.html">Про магазин</a></li>
                     <li><a href="catalog.html">Каталог</a></li>
-                    <li><a href="#">Контакти</a></li>
+                    <li><a href="contacts.html">Контакти</a></li>
                     <li><a href="#">Кошик</a></li>
                 </ul>
             </nav>
@@ -239,10 +277,11 @@
                 <ul>
                     <li><a href="#">Політика конфіденційності</a></li>
                     <li><a href="#">Умови доставки</a></li>
-                    <li><a href="#">Контакти</a></li>
+                    <li><a href="contacts.html">Контакти</a></li>
                 </ul>
             </nav>
         </div>
     </footer>
 </body>
 </html>
+
