--- a/main.html
+++ b/main.html
@@ -77,6 +77,7 @@
             animation: fadeIn 2s forwards;
         }
 
+
         @keyframes fadeIn {
             to {
                 opacity: 1;
@@ -161,7 +162,7 @@
         }
 
         .btn-secondary {
-            background-color: #2ecc71;
+            background-color: #4CAF50;
             color: white;
             padding: 8px 20px;
             border-radius: 4px;
@@ -220,8 +221,7 @@
                     <li><a href="/">Головна</a></li>
                     <li><a href="about.html">Про магазин</a></li>
                     <li><a href="catalog.html">Каталог</a></li>
-                    <li><a href="contacts.html">Контакти</a></li>
-                    <li><a href="#">Кошик</a></li>
+                    <li><a href="contact.html">Контакти</a></li>
                 </ul>
             </nav>
         </div>
@@ -243,45 +243,29 @@
             <div class="product-card">
                 <img src="https://content1.rozetka.com.ua/goods/images/big/164397086.jpg" alt="Материнська плата">
                 <h3>Материнська плата Asus TUF Gaming B450-Plus II (sAM4, AMD B450, PCI-Ex16)</h3>
-                <p class="price">4 229 грн</p>
-                <a href="#" class="btn-secondary">Купити</a>
+                <p class="price">4,229 грн</p>
+                <a href="catalog.html" class="btn-secondary">Купити</a>
             </div>
             <div class="product-card">
                 <img src="https://artline.ua/storage/images/products/10982/gallery/135790/gallery_1674741350935878_0.webp" alt="Процесор">
                 <h3>Процесор Ryzen 7 5800X3D</h3>
-                <p class="price">8 125 грн</p>
-                <a href="#" class="btn-secondary">Купити</a>
+                <p class="price">8,125 грн</p>
+                <a href="catalog.html" class="btn-secondary">Купити</a>
             </div>
             <div class="product-card">
                 <img src="https://encrypted-tbn0.gstatic.com/shopping?q=tbn:ANd9GcTWMKBBulFjmo6ySiq0tdDYCEyof8LPe8XFg0pzdXsgHk0FAfxQLzsEM5GEGp2VLNbYvLxHfQbL0EeaO1aFr8681hOZ-xXS_ZLwsxKTHAJ2Se-qm8v7Ke9YPg&usqp=CAE" alt="Відеокарта">
                 <h3>Відеокарта Palit GeForce RTX 4070 JetStream</h3>
-                <p class="price">25 000 грн</p>
-                <a href="#" class="btn-secondary">Купити</a>
+                <p class="price">25,000 грн</p>
+                <a href="catalog.html" class="btn-secondary">Купити</a>
             </div>
             <div class="product-card">
                 <img src="https://img.telemart.ua/374725-526249-product_popup/kingston-ddr4-32gb-2x16gb-3200mhz-fury-beast-black-kf432c16bb1k232.jpg" alt="Оперативна пам'ять">
                 <h3>Оперативна пам'ять Kingston Fury DDR4 32GB (2x16GB) 3200Mhz</h3>
-                <p class="price">3 000 грн</p>
-                <a href="#" class="btn-secondary">Купити</a>
+                <p class="price">3,000 грн</p>
+                <a href="catalog.html" class="btn-secondary">Купити</a>
             </div>
         </div>
     </section>
-
-    <!-- Підвал сайту -->
-    <footer>
-        <div class="footer-container">
-            <div class="footer-logo">
-                <a href="/">ТехноСвіт</a>
-            </div>
-            <nav class="footer-nav">
-                <ul>
-                    <li><a href="#">Політика конфіденційності</a></li>
-                    <li><a href="#">Умови доставки</a></li>
-                    <li><a href="contacts.html">Контакти</a></li>
-                </ul>
-            </nav>
-        </div>
-    </footer>
 </body>
 </html>
 
