--- a/main.html
+++ b/main.html
@@ -218,7 +218,7 @@
             </div>
             <nav class="main-nav">
                 <ul>
-                    <li><a href="/">Головна</a></li>
+                    <li><a href="main.html">Головна</a></li>
                     <li><a href="about.html">Про магазин</a></li>
                     <li><a href="catalog.html">Каталог</a></li>
                     <li><a href="contact.html">Контакти</a></li>
